# Bartleby

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES_v0.1.0-10.md  RELEASE_NOTES_v0.1.0-5.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
scripts/: download_sidecars.ps1  download_sidecars.sh
src/: index.html  main.js  style.css  verifier.html  verifier.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.md  tauri.windows.conf.json
src-tauri/.cargo/: cargo_config.toml
src-tauri/capabilities/: default.json  verifier.json
src-tauri/icons/: icon.icns
src-tauri/src/: copy_engine.rs  html_report.rs  main.rs  metadata.rs  mhl_report.rs  pdf_report.rs  settings.rs  sidecar.rs  verify_engine.rs
src/themes/: adwaita.css  macos.css  mint-y-aqua.css  windows11.css
